--- a/info.yaml
+++ b/info.yaml
@@ -1,4 +1,4 @@
-# Tiny Tapeout project information (Wokwi project)
+A# Tiny Tapeout project information (Wokwi project)
 project:
   wokwi_id:     433656039483610113       # Set this to the ID of your Wokwi project (the number from the project's URL)
   title:        "Wokwi tapeout project"      # Project title
@@ -16,20 +16,20 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "A0"
+  ui[1]: "B0"
+  ui[2]: "A1"
+  ui[3]: "B1"
+  ui[4]: "A2"
+  ui[5]: "B2"
+  ui[6]: "A3"
+  ui[7]: "B3"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
+  uo[0]: "out_and"
+  uo[1]: "out_nad"
+  uo[2]: "out_xor"
+  uo[3]: "out_xnor"
   uo[4]: ""
   uo[5]: ""
   uo[6]: ""
