--- a/info.yaml
+++ b/info.yaml
@@ -4,7 +4,7 @@ project:
   title:        "Wokwi tapeout project"      # Project title
   author:       "Stacey Halsey"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "|This circuit implements a four gate AND, NAND XOR and XNOR where each input has one bit|"      # One line description of what your project does
+  description:  "This circuit implements a four gate AND, NAND XOR and XNOR where each input has one bit"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     10000       # Clock frequency in Hz (or 0 if not applicable)
 
